--- a/css/styles.css
+++ b/css/styles.css
@@ -664,9 +664,7 @@ http://www.tipue.com/search
     border: 0;
     border: 1px solid #1b305f;
     border-right: 0;
-    border-radius: 6px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    border-radius: 0;
     outline-color: #efb027;
     background-color: #f1f1f1;
 }
@@ -842,9 +840,7 @@ http://www.tipue.com/search
 
     border: 0;
     border: 1px solid #1b305f;
-    border-radius: 6px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+    border-radius: 0;
     background-color: #1b305f;
 }
 
