--- a/src/css/_width.css
+++ b/src/css/_width.css
@@ -35,7 +35,6 @@
   width: 50%;
 }
 
-
 .w-60 {
   width: 60%;
 }
@@ -67,8 +66,6 @@
 .w-a {
   width: auto;
 }
-
-
 
 @media only screen and (min-width: 30em) {
 
@@ -182,6 +179,11 @@
 
     .maw-60 {
       max-width: 60vw;
+      margin: 0 auto;
+    }
+
+    .maw-70 {
+      max-width: 70vw;
       margin: 0 auto;
     }
 
