--- a/css/styles.css
+++ b/css/styles.css
@@ -1119,42 +1119,49 @@ path.q2-3 {
     background-repeat: repeat;
 }
 
-.bisla-home-body {
-    margin: 0 auto;
-    font-size: 0;
-    max-height: calc(100vh - 5rem);
+.bislai-home-body-grid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    justify-items: stretch;
+    align-items: stretch;
 }
 
 .bislai-home-body-left {
     width: 100%;
     display: inline-block;
-    position: relative;
-    top: 0;
-    left: 0;
+
 }
 
 .bislai-home-body-img {
     width: 100%;
     max-width: 100%;
-    max-height: calc(100vh - 5rem);
     object-fit: cover;
+    position: relative;
+    height: 100vh;
 }
 
 .bisla-home-body-left-gradient {
     position: absolute;
+    z-index: 100;
     top: 0;
     left: 0;
     background-image: linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
     opacity: .5;
     width: 100%;
+    max-width: 100%;
     height: 100%;
 }
 
+.bislai-home-body-text {
+    align-self: center;
+    justify-self: center;
+}
+
 .bislai-home-body-left-text {
-    position: absolute;
-    top: 5rem;
-    left: 12rem;
     background-color: #000;
+    width: 33rem;
 }
 
 .bislai-home-body-left-text:hover .bislai-home-body-left-text-white {
@@ -1167,26 +1174,20 @@ path.q2-3 {
             color: #fff;
         }
 
-.bislai-home-body-left-text:hover .bislai-home-body-left-container {
-            transform: scaleX(1);
-        }
-
 .bislai-home-body-left-text-white {
     font-size: 2.5rem;
     padding: 1rem 2rem;
     color: #fff;
     display: inline-block;
     vertical-align: middle;
+    max-width: 27rem;
 }
 
 .bislai-home-body-left-container {
-    background-color: #EFFC11;
     display: inline-block;
     vertical-align: middle;
     padding: 1rem 2rem;
-    transform-origin: right;
-    transition: transform .3s ease-in-out;
-    transform: scaleX(0);
+    background-color: #EFFC11;
 }
 
 .bislai-icon {
@@ -1196,18 +1197,15 @@ path.q2-3 {
 
 .bislai-home-body-right {
     display: inline-block;
-    background-color: #EFFC11;
     padding: 3rem 2rem;
-    position: absolute;
-    left: 12rem;
-    top: 15rem;
-    max-width: 30rem;
+    background-color: #EFFC11;
+    max-width: 33rem;
+    margin-top: 3rem;
 }
 
 .bislai-home-body-right-text {
     display: inline-block;
     font-size: 1rem;
-    font-family: 'Merriweather', serif;
     margin: 0;
     margin-bottom: .5rem;
 }
