--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -950,6 +950,7 @@ path.q2-3 {
 .partido-card {
     background-color: #ccc;
     display: inline-block;
+    z-index: 2;
     width: 50vw;
     height: 18rem;
     background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
@@ -961,7 +962,7 @@ path.q2-3 {
     }
     &:hover {
         .partido-card-bg {
-            transform: scaleX(1);
+            transform: scaleX(0);
         }
         .partido-card-top {
             transform: translateX(2rem);
@@ -970,7 +971,25 @@ path.q2-3 {
         .partido-card-top-right {
             transform: translateX(-2rem);
         }
+        .partido-card-button {
+            opacity: 1;
+        }
+        .partido-card-votos,
+        .partido-card-concejales,
+        .partido-card-title {
+            opacity: 0;
+        }
     }
+}
+
+.partido-card-button {
+    opacity: 0;
+    transition: opacity .3s ease-in;
+    transition-delay: .1s;
+    font-weight: bold;
+    margin-bottom: 0;
+    position: absolute;
+    top: 40%;
 }
 
 .partido-card-bg {
@@ -980,8 +999,8 @@ path.q2-3 {
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, .5);
-    transform: scaleX(0);
-    transform-origin: right;
+    transform: scaleX(1);
+    transform-origin: left;
     transition: transform .3s ease-in;
 }
 
@@ -1002,11 +1021,12 @@ path.q2-3 {
 }
 
 .partido-card-top {
-    position: absolute;
     background-color: #fff;
     width: 25rem;
+    height: 13rem;
     padding: 2rem 1rem;
     right: 0;
+    z-index: 3;
     top: 2rem;
     border-bottom: 5px solid var(--pp);
     box-shadow: 0 2px 20px 2px rgba(149, 154, 154, .27);
@@ -1014,7 +1034,7 @@ path.q2-3 {
 }
 
 .partido-card-left {
-    transform-origin: left;
+    transform-origin: right;
 }
 
 .partido-card-top-right {
@@ -1045,11 +1065,16 @@ path.q2-3 {
     font-size: 2.5rem;
     margin: 0;
     font-weight: normal;
+    transition: opacity .3s ease-in;
+    opacity: 1;
 }
 
 .partido-card-votos,
 .partido-card-concejales {
+    transition: opacity .3s ease-in;
     font-size: 1rem;
+    margin: .5rem 0;
+    opacity: 1;
 }
 
 .estadisticas-grid {
