--- a/css/styles.css
+++ b/css/styles.css
@@ -1283,7 +1283,8 @@ path.q2-3 {
             transform: translateX(-2rem);
         }
 
-.partido-card:hover .partido-card-button {
+.partido-card:hover .partido-card-button,
+        .partido-card:hover .partido-card-icon {
             opacity: 1;
         }
 
@@ -1298,9 +1299,19 @@ path.q2-3 {
     transition: opacity .3s ease-in;
     transition-delay: .1s;
     font-weight: bold;
-    margin-bottom: 0;
-    position: absolute;
-    top: 40%;
+    margin: 0;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.partido-card-icon {
+    width: 10px;
+    opacity: 0;
+    display: inline-block;
+    vertical-align: middle;
+    transition: opacity .3s ease-in;
+    transition-delay: .1s;
+    margin-left: 8px;
 }
 
 .partido-card-bg {
