--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -974,6 +974,7 @@ path.q2-3 {
         .partido-card-button,
         .partido-card-icon {
             opacity: 1;
+            transform: translateY(-70px);
         }
         .partido-card-votos,
         .partido-card-concejales,
