--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -6,7 +6,7 @@
     --serif: "Georgia", serif;
     --black: #121;
     --pureblack: #000;
-    --yellow: #EFFC11;
+    --yellow: #3BE4CF;
     --grey: #efefef;
     --greyc: #ccc;
     --white: #fff;
