--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -95,7 +95,6 @@ body {
 }
 
 /* ESTILOS C3 */
-
 /* stylelint-disable */
 
 .c3 svg {
@@ -247,7 +246,7 @@ body {
     border-left: 1px dotted #999;
 }
 
-.c3-tooltip td > span {
+.c3-tooltip td>span {
     display: inline-block;
     width: 10px;
     height: 10px;
@@ -309,6 +308,7 @@ Tipue Search is released under the MIT License
 http://www.tipue.com/search
 */
 
+
 /* fonts */
 
 #tipue_search_input,
@@ -334,6 +334,9 @@ http://www.tipue.com/search
 .tipue_search_related_bold {
     font-weight: bold;
 }
+
+
+
 
 /* search box */
 
@@ -364,7 +367,6 @@ http://www.tipue.com/search
 .tipue_search_right {
     float: left;
 }
-
 /* search results */
 
 #tipue_search_content {
@@ -552,16 +554,16 @@ http://www.tipue.com/search
     }
 }
 
-.input-record:checked + .label-record {
+.input-record:checked+.label-record {
     color: #dce0db;
     border: 1px solid var(--impureGrey);
     border-top: 5px solid var(--gradient2);
     background-color: var(--bislai);
 }
 
-#tab1:checked ~ .contenido1,
-#tab2:checked ~ .contenido2,
-#tab3:checked ~ .contenido3 {
+#tab1:checked~.contenido1,
+#tab2:checked~.contenido2,
+#tab3:checked~.contenido3 {
     display: block;
     background-color: var(--bislai);
     display: grid;
@@ -596,6 +598,9 @@ http://www.tipue.com/search
 .tabla-record-minimas-desktop {
     display: none;
 }
+
+
+
 
 /* stylelint-enable */
 
@@ -697,7 +702,6 @@ path.q2-3 {
         display: inline-block;
         min-width: 50%;
         text-align: left;
-
     }
     .resultadoVotos {
         padding: 0;
@@ -713,6 +717,7 @@ path.q2-3 {
 }
 
 /* stylelint-disable */
+
 .tooltipLeyenda,
 .tooltipPartido {
     span {
@@ -757,16 +762,18 @@ path.q2-3 {
 }
 
 /* stylelint-disable */
+
 .tooltipLeyenda {
     font-family: var(--fontSystem);
     font-weight: bold;
     display: block;
     margin: 0;
     font-size: 16px;
-    + p {
+    +p {
         display: none;
     }
 }
+
 /* stylelint-enable */
 
 .mapa-container {
@@ -812,49 +819,18 @@ path.q2-3 {
     background-repeat: repeat;
 }
 
-.bislai-home-body-grid {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    justify-items: stretch;
-    align-items: stretch;
-}
-
 .bislai-home-body-left {
     width: 100%;
     display: inline-block;
-
-}
-
-.bislai-home-body-img {
-    width: 100%;
-    max-width: 100%;
-    object-fit: cover;
-    position: relative;
-    height: 100vh;
-}
-
-.bisla-home-body-left-gradient {
-    position: absolute;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    background-image: linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
-    opacity: .5;
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-}
-
-.bislai-home-body-text {
-    align-self: center;
-    justify-self: center;
 }
 
 .bislai-home-body-left-text {
     background-color: var(--pureblack);
     width: 33rem;
+    position: absolute;
+    top: 10rem;
+    left: 35rem;
+    z-index: 10;
     &:hover {
         .bislai-home-body-left-text-white {
             color: var(--impureBlack);
@@ -890,10 +866,13 @@ path.q2-3 {
 
 .bislai-home-body-right {
     display: inline-block;
-    padding: 3rem 2rem;
+    padding: 1.5rem;
     background-color: var(--yellow);
     max-width: 33rem;
-    margin-top: 3rem;
+    position: absolute;
+    top: 18rem;
+    left: 35rem;
+    z-index: 10;
 }
 
 .bislai-home-body-right-text {
@@ -904,22 +883,22 @@ path.q2-3 {
 }
 
 .hvr-grow {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px transparent;
-  -webkit-transition-duration: .5s;
-  transition-duration: .5s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    -webkit-transition-duration: .5s;
+    transition-duration: .5s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
 }
 
 .hvr-grow:hover,
 .hvr-grow:focus,
 .hvr-grow:active {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .tooltip-title {
@@ -1114,4 +1093,59 @@ path.q2-3 {
     color: #fff;
     padding: 1rem 3rem;
     white-space: nowrap;
+}
+
+.column {
+    position: relative;
+    padding: .5rem;
+    transition: all ease-in-out .3s;
+    color: rgba(0, 0, 0, .75);
+    height: 100vh;
+    &:after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+    }
+}
+
+.blue-light {
+    background-color: #181e59;
+    img {
+        mix-blend-mode: lighten;
+        -webkit-filter: grayscale(100%) contrast(.8);
+        filter: grayscale(100%) contrast(.8);
+    }
+    &:after {
+        background-color: #E7E1A6;
+        mix-blend-mode: multiply;
+    }
+}
+
+.blue {
+    background-color: #77acd4;
+    img {
+        mix-blend-mode: multiply;
+        -webkit-filter: grayscale(100%) contrast(1.2);
+        filter: grayscale(100%) contrast(1.2);
+    }
+    &:after {
+        background-color: #033dc5;
+        mix-blend-mode: lighten;
+    }
+}
+
+.header-home {
+    background-color: transparent;
+    position: absolute;
+    top: .5rem;
+    padding: .5rem 1rem;
 }
