--- a/css/styles.css
+++ b/css/styles.css
@@ -1134,12 +1134,15 @@ path.q2-3 {
 
 .bislai-home-body-left-text:hover .bislai-home-body-left-text-white {
             color: var(--impureBlack);
-            transition: all 1s ease-in;
         }
 
 .bislai-home-body-left-text:hover .line-throught {
             text-decoration: line-through;
             color: #fff;
+        }
+
+.bislai-home-body-left-text:hover .bislai-icon {
+            opacity: 1;
         }
 
 .bislai-home-body-left-text-white {
@@ -1149,6 +1152,7 @@ path.q2-3 {
     display: inline-block;
     vertical-align: middle;
     max-width: 27rem;
+    transition: color .3s ease-in;
 }
 
 .bislai-home-body-left-container {
@@ -1161,11 +1165,13 @@ path.q2-3 {
 .bislai-icon {
     display: block;
     width: 32px;
+    opacity: 0;
+    transition: opacity .4s ease-in;
 }
 
 .bislai-home-body-right {
     display: inline-block;
-    padding: 1.5rem;
+    padding: 2rem;
     background-color: #3BE4CF;
     max-width: 33rem;
     position: absolute;
@@ -1176,7 +1182,7 @@ path.q2-3 {
 
 .bislai-home-body-right-text {
     display: inline-block;
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin: 0;
     margin-bottom: .5rem;
 }
@@ -1457,6 +1463,18 @@ path.q2-3 {
     position: absolute;
     top: .5rem;
     padding: .5rem 1rem;
+}
+
+.tabs {
+    transition: all .3s ease-in;
+}
+
+.tabs-title {
+    font-size: 2.5rem;
+    padding: 1rem 2rem;
+    color: #fff;
+    background-color: #000;
+    font-weight: normal;
 }
 
 .maw-70 {
