--- a/css/styles.css
+++ b/css/styles.css
@@ -1461,6 +1461,10 @@ path.q2-3 {
     font-weight: normal;
 }
 
+#chart {
+    max-width: 50vw;
+}
+
 .maw-70 {
   max-width: 70rem;
   margin: 0 auto;
