comprobando todos los footer y header #81

--- a/src/css/_border.css
+++ b/src/css/_border.css
@@ -89,7 +89,7 @@
 .borderc-pp,
 .borderc-psoe,
 .borderc-cs,
-.borderc-ch,
+.borderc-cha,
 .borderc-zec {
     border-left: 10px solid var(--psoe);
 }
@@ -102,7 +102,7 @@
     border-left-color: var(--pp);
 }
 
-.borderc-ch {
+.borderc-cha {
     border-left-color: var(--chunta);
 }
 
