cabecera para todas las paginas de partidos

--- a/css/styles.css
+++ b/css/styles.css
@@ -3552,7 +3552,7 @@ path.q2-3 {
 }
 
 .partidos-cabecera {
-    height: 50vh;
+    min-height: 50vh;
     padding: 3rem;
     width: 100%;
     font-size: 0;
@@ -3567,7 +3567,7 @@ path.q2-3 {
     font-size: 6rem;
     font-family: "Fjalla One", sans-serif;
     color: #121;
-    margin-top: 0;
+    margin: 0;
 }
 
 .partidos-cabecera-dcha {
@@ -3578,6 +3578,15 @@ path.q2-3 {
 #historico {
     max-width: 80%;
     margin: 0 auto;
+}
+
+.partidos-concejales {
+    font-size: 1rem;
+}
+
+.partido-concejales-lista {
+    font-size: 1rem;
+    list-style-position: inside;
 }
 
 /*# sourceMappingURL=styles.css.map */
