--- a/css/styles.css
+++ b/css/styles.css
@@ -3566,13 +3566,25 @@ path.q2-3 {
 .partidos-cabecera-izda {
     width: 40%;
     display: inline-block;
+    vertical-align: top;
 }
 
 .partidos-cabecera-title {
-    font-size: 6rem;
+    font-size: 5rem;
     font-family: "Fjalla One", sans-serif;
     color: #121;
     margin: 0;
+}
+
+.partidos-cabecera-texto,
+.partidos-cabecera-texto-derecha {
+    font-size: 1rem;
+    margin: 0 0 1.5rem;
+}
+
+.partidos-cabecera-texto-derecha {
+    max-width: 80%;
+    margin: 1rem auto;
 }
 
 .partidos-cabecera-dcha {
@@ -3647,31 +3659,5 @@ path.q2-3 {
     max-width: 60%;
     margin: 0 auto;
 }
-
-.grafico-a-favor .partidos-grafico-ciudadanos {
-        width: 20vw;
-    }
-
-.partidos-grafico-a-favor {
-    position: relative;
-}
-
-.partidos-grafico-a-favor:after,
-    .partidos-grafico-a-favor:before {
-        content: '';
-        height: 10px;
-        width: 100%;
-        background-color: #f07a36;
-        display: inline-block;
-        position: absolute;
-        left: 0;
-        top: -15px;
-        z-index: 2;
-    }
-
-.partidos-grafico-a-favor:before {
-        top: initial;
-        bottom: -10px;
-    }
 
 /*# sourceMappingURL=styles.css.map */
