--- a/src/css/_partidos.css
+++ b/src/css/_partidos.css
@@ -6,7 +6,7 @@
 }
 
 .partidos-cabecera-izda {
-    width: 40%;
+    width: 45%;
     display: inline-block;
     vertical-align: top;
 }
@@ -30,7 +30,7 @@
 }
 
 .partidos-cabecera-dcha {
-    width: 60%;
+    width: 55%;
     display: inline-block;
 }
 
@@ -83,6 +83,20 @@
     left: 50px;
     top: 37px;
     z-index: 2;
+}
+
+.partidos-grafico-pp {
+    .partidos-grafico-ciudadanos,
+    .partidos-grafico-ciudadanos-after {
+        background-color: var(--pp);
+    }
+}
+
+.partidos-grafico-zec {
+    .partidos-grafico-ciudadanos,
+    .partidos-grafico-ciudadanos-after {
+        background-color: var(--zec);
+    }
 }
 
 .partidos-grafico-ciudadanos-after {
