--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -2,7 +2,7 @@
     --fontSystem: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Helvetica Neue", Helvetica, sans-serif;
     --fontBislai: "Fjalla One", sans-serif;
-    --fonttext: 'Merriweather', serif;
+    --fonttext: 'Source Serif Pro', serif;
     --serif: "Georgia", serif;
     --black: #121;
     --pureblack: #000;
