--- a/css/styles.css
+++ b/css/styles.css
@@ -1349,7 +1349,7 @@ path.q2-3 {
 .partido-card-concejales {
     transition: opacity .3s ease-in;
     font-size: .8rem;
-    font-family: 'Merriweather', serif;
+    font-family: 'Source Serif Pro', serif;
     margin: .5rem 0;
     font-weight: 600;
     text-align: left;
@@ -3633,13 +3633,13 @@ path.q2-3 {
 .partidos-grafico-ciudadanos,
 .partidos-grafico-ciudadanos-after {
     content: '';
-    height: 15px;
-    width: 39vw;
-    background-color: #f07a36;
+    height: 25px;
+    width: 100vw;
+    background-color: rgba(240, 122, 54, .4);
     display: inline-block;
     position: absolute;
-    left: 50px;
-    top: 37px;
+    left: -10vw;
+    top: 30px;
     z-index: 2;
 }
 
@@ -3661,7 +3661,7 @@ path.q2-3 {
 
 .partidos-grafico-parrafo {
     font-size: 1rem;
-    font-family: "Georgia", serif;
+    font-family: 'Source Serif Pro', serif;
     margin: 5rem auto;
 }
 
@@ -3669,5 +3669,16 @@ path.q2-3 {
     max-width: 60%;
     margin: 0 auto;
 }
+
+.bgc-zec .partidos-cabecera-title {
+        font-size: 5rem;
+        font-family: "Fjalla One", sans-serif;
+        color: #d0f3f2;
+        margin: 0;
+    }
+
+.bgc-zec .partido-concejales-lista a {
+        color: #dbf17e;
+    }
 
 /*# sourceMappingURL=styles.css.map */
